--- a/ejercicio_profundizacion_1/css/style.css
+++ b/ejercicio_profundizacion_1/css/style.css
@@ -34,7 +34,7 @@ header > nav > ul {
 
 .container {    
     background-color: var(--bg-one);
-    background-image: url("../images/fondo.jpg");
+    background-image: url("https://wall.alphacoders.com/big.php?i=278411");
     background-size: 85vw;
     background-repeat: no-repeat;
     background-position: center;    
